# irm

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  setup.py
.travis/: before_install_microscopes_common.py  config.mk  install_distributions.py  install_microscopes_common.py
cmake/: find_in_venv_like.sh  print_cmake_command.py
cmake/Modules/: FindMicroscopesCommon.cmake
conda/microscopes-irm/: build.sh  meta.yaml
include/microscopes/irm/: model.hpp
microscopes/cxx/irm/: _model.pxd  _model.pyx  _model_h.pxd  model.pyx
microscopes/irm/: _model.pxd  _model.pyx  _model_h.pxd  definition.pxd  definition.pyx  model.pyx  query.py  runner.py  testutil.py
microscopes/py/irm/: model.py
src/irm/: model.cpp
test/: test_cxx_imports.py  test_definition.py  test_irm_gibbs_assign.py  test_irm_simple.py  test_runner.py  test_slice_theta.py  test_state.py
test/cxx/: a.cpp  test_state.cpp
